--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,64 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  /* common */
+  .container {
+    @apply lg:max-w-[1170px] mx-auto p-4;
+  }
+  .btn {
+    @apply mt-7 text-base md:text-lg font-semibold rounded-lg px-3 py-1 bg-primary-5 hover:scale-105 hover:bg-primary-6 duration-200;
+  }
+  .nav__link {
+    @apply cursor-pointer p-1 hover:scale-105 hover:drop-shadow-sm duration-200;
+  }
+  .section-heading {
+    @apply flex flex-col pt-10 md:pt-16 md:items-center text-4xl md:text-5xl text-grey-1 font-semibold font-secondary;
+  }
+  .section-heading-lv2 {
+    @apply mt-12 text-20 md:text-[26px] tracking-widest font-semibold;
+  }
+  .section-heading-underline {
+    @apply w-[60px] md:w-[80px] h-[3px] md:h-[4px] bg-primary-5 mt-2 md:mt-4;
+  }
+  /* skills */
+  .skills-item {
+    @apply flex flex-col justify-center items-center text-primary-1;
+  }
+  .skills-name {
+    @apply mt-1 text-sm md:text-base;
+  }
+  /* portfolio */
+  .project-item {
+    @apply mt-10 p-5 mx-auto rounded-lg shadow-lg shadow-black/20 md:flex md:gap-10;
+  }
+  .project-item-even {
+    @apply flex-row-reverse;
+  }
+  .project-media {
+    @apply flex items-center object-cover md:w-1/2;
+  }
+  .project-content {
+    @apply md:w-1/2;
+  }
+  .project__img {
+    @apply rounded-lg;
+  }
+  .project__title {
+    @apply mt-10 text-20 md:text-30 text-grey-1 font-secondary font-bold tracking-wider;
+  }
+  .project__desc {
+    @apply mt-5 tracking-wider;
+  }
+  .project__tags {
+    @apply flex items-center gap-8 mt-5 ml-5 text-xs md:text-base font-secondary tracking-wider list-disc;
+  }
+  .project__links {
+    @apply grid grid-cols-2 md:grid-cols-1 gap-x-3 mt-3 text-center pb-10;
+  }
+  /* contact */
+  .contact-item {
+    @apply flex flex-col md:flex-row md:items-center gap-2;
+  }
+}
